RESOLVED FIXED127801
EFL port should stop using COMPILE_ASSERT_MATCHING_ENUM macros
https://bugs.webkit.org/show_bug.cgi?id=127801
Summary EFL port should stop using COMPILE_ASSERT_MATCHING_ENUM macros
Anders Carlsson
Reported 2014-01-28 14:28:10 PST
Instead of having COMPILE_ASSERT_MATCHING_ENUM macros, WebKit EFL should have functions that can map between different types. For example: inline WKSameDocumentNavigationType toAPI(SameDocumentNavigationType type) { WKFrameNavigationType wkType = kWKSameDocumentNavigationAnchorNavigation; switch (type) { case SameDocumentNavigationAnchorNavigation: wkType = kWKSameDocumentNavigationAnchorNavigation; break; case SameDocumentNavigationSessionStatePush: wkType = kWKSameDocumentNavigationSessionStatePush; break; case SameDocumentNavigationSessionStateReplace: wkType = kWKSameDocumentNavigationSessionStateReplace; break; case SameDocumentNavigationSessionStatePop: wkType = kWKSameDocumentNavigationSessionStatePop; break; } return wkType; } This allows us to change the enum values in WebCore without breaking the builds.
Attachments
Patch (35.84 KB, patch)
2014-01-29 02:55 PST, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2014-01-29 02:55:37 PST
Anders Carlsson
Comment 2 2014-01-29 08:14:23 PST
Comment on attachment 222561 [details] Patch Thanks a lot for doing this!
WebKit Commit Bot
Comment 3 2014-01-29 12:12:59 PST
Comment on attachment 222561 [details] Patch Clearing flags on attachment: 222561 Committed r163033: <http://trac.webkit.org/changeset/163033>
WebKit Commit Bot
Comment 4 2014-01-29 12:13:04 PST
All reviewed patches have been landed. Closing bug.
Gyuyoung Kim
Comment 5 2014-02-04 23:18:52 PST
(In reply to comment #1) > Created an attachment (id=222561) [details] > Patch Thanks Ryuan :)
Note You need to log in before you can comment on or make changes to this bug.